--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>8</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Team:</strong> <span>Sheffield United Junior Blades</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>League:</strong> <a href="https://www.junleague.com/"><span>Sheffield & District Junior League</span></a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Preferred positions:</strong> <span>RW | LW | CDM</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>9</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Team:</strong> <span>Thornes Juniors U10</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>League:</strong> <a href=""><span>Huddersfield Junior League</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Preferred positions:</strong> <span>LW | CM | RW</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Preferred foot:</strong> <span>Right</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Academy:</strong> <a href="https://www.sufc.co.uk/academy"><span>Sheffield United Academy</span></a></li>
                 </ul>
